tests/ui/issues/issue-17999.stderr
error: unused variable: `x`
  --> $DIR/issue-17999.rs:5:13
   |
LL |         let x = ();
   |             ^
   |
note: the lint level is defined here
  --> $DIR/issue-17999.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^
help: if this is intentional, prefix it with an underscore
   |
LL |         let _x = ();
   |             ~~

error: unused variable: `a`
  --> $DIR/issue-17999.rs:7:13
   |
LL |             a => {}
   |             ^
   |
help: if this is intentional, prefix it with an underscore
   |
LL |             _a => {}
   |             ~~

error: aborting due to 2 previous errors

